<resources>
    <string name="app_name">DelaApp</string>
    <string name="Nombre">Nombre</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Email">Email</string>
    <string name="Telefono">Telefono</string>
    <string name="GuardarDatos">Guardar</string>
    <string name="IniciarSesion">Iniciar Sesion</string>
    <string name="Registrate">Registrate</string>
    <string name="OlvideContra">Olvide contraseña</string>
</resources>