<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Guardar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="230dp"
        android:layout_height="234dp"
        android:layout_marginBottom="556dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#E9FFE1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cambo"
            android:text="Nombre"
            android:textColor="#000000"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/NombreID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/cambo"
            android:hint="@string/Nombre"
            android:inputType="textPersonName"
            android:textColorHint="#1A4E07"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cambo"
            android:text="Usuario"
            android:textColor="#000000"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/UsuarioID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/cambo"
            android:hint="@string/Usuario"
            android:inputType="textPersonName"
            android:textColorHint="#1A4E07"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cambo"
            android:text="Contraseña"
            android:textColor="#000000"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/ContraseñaID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/cambo"
            android:hint="@string/Contraseña"
            android:textColorHint="#1A4E07"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cambo"
            android:text="Email"
            android:textColor="#000000"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/EmailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/cambo"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textColorHint="#1A4E07"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cambo"
            android:text="Telefono"
            android:textColor="#000000"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/TelID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/cambo"
            android:hint="@string/Telefono"
            android:inputType="phone"
            android:textColorHint="#1A4E07"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cambo"
            android:text="Sexo"
            android:textColor="#000000"
            android:textSize="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cambo"
                    android:text="Femenino"
                    android:textColor="#000000"
                    android:textSize="22dp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cambo"
                    android:text="Masculino"
                    android:textColor="#000000"
                    android:textSize="22dp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/RegistrateID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#1A4E07"
        android:fontFamily="@font/cambo"
        android:text="@string/GuardarDatos"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/IniciaSesionID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/IniciaSesionID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#1A4E07"
        android:fontFamily="@font/cambo"
        android:text="@string/IniciarSesion"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.509" />
</androidx.constraintlayout.widget.ConstraintLayout>